--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body {
 }
 form {
     gap: 8px;
-    flex-direction:column;
+    align-items: center;
+    flex-direction: column;
     display: flex;
 }
 .etch-container {
